Fix Bug 318453 - Blinking cursor of "fullwidth" character are "halfwidth"

Calculate the character width at current blinking cursor.

BUG: 318453